<resources>
    <string name="app_name">WareHouse</string>
    <string name="welcome_message">Welcome To Warehouse</string>
    <string name="warehouses">Warehouses</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="inventory">Inventoy</string>
    <string name="add_warehouse">Add Warehouse</string>
    <string name="move">Move Items</string>
    <string name="setting">Settings</string>
    <string name="share">Share</string>
    <string name="about">About App</string>
    <string name="warehouse_manager">Warehouse Manager</string>
    <string name="warehouse_client">Warehouse Client</string>
    <string name="logo">My Warehouse Application</string>
    <string name="actions">Actions</string>
    <string name="empty">Empty Warehouses</string>
    <string name="occupied">Occupied Warehouses</string>
    <string name="items">Items</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="send_message">Send Message</string>
    <string name="call">Call</string>
    <string name="location">Location</string>
    <string name="about_ware">About Warehouse</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_item">Add Item</string>
    <string name="report">Reports</string>
    <string name="remove_item">Remove Item For</string>
    <string name="orders">Make Orders</string>
    <string name="items_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_count">Item Count</string>
    <string name="orders_menu">Orders</string>
</resources>