<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        
        <item
            android:id="@+id/items"
            android:title="@string/items"
            android:icon="@drawable/ic_baseline_local_convenience_store_24"/>

        <item
            android:id="@+id/add_item"
            android:title="@string/add_item"
            android:icon="@drawable/ic_baseline_playlist_add_24"/>

        <item
            android:id="@+id/report"
            android:title="@string/report"
            android:icon="@drawable/ic_baseline_format_list_numbered_24"/>

    </group>

    <item android:title="@string/actions">

        <menu>

            <item
                android:id="@+id/settings"
                android:title="@string/setting"
                android:icon="@drawable/ic_baseline_settings_24"/>

            <item
                android:id="@+id/share"
                android:title="@string/share"
                android:icon="@drawable/ic_baseline_share_24"/>

            <item
                android:id="@+id/about"
                android:title="@string/about"
                android:icon="@drawable/ic_baseline_info_24"/>

            <item
                android:id="@+id/logout_admin"
                android:title="Logout"
                android:icon="@drawable/ic_baseline_login_24"/>

        </menu>

    </item>

</menu>