<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WarehouseDetailsActivity">

    <ImageView
        android:id="@+id/warehouse"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/industrial"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warehouse"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:id="@+id/buttons">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            android:textColor="#ffffff"
            android:layout_marginRight="10dp"
            android:id="@+id/message"
            android:layout_alignParentLeft="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textColor="#ffffff"
            android:layout_marginLeft="60dp"
            android:id="@+id/call"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/message"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_ware"
        android:layout_below="@+id/buttons"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/about_warehouse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_warehouse"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:id="@+id/ware_details">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/location"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/space"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/pricing"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Book Warehouse Space"
        android:layout_below="@+id/ware_details"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:padding="5dp"
        android:gravity="center"/>

</RelativeLayout>